tests/ui/no_such_file.stderr
error: No such file or directory (os error 2)
 --> tests/ui/no_such_file.rs:3:23
  |
3 | const _: &str = eval!(include_str!(concat!(env!("CARGO_MANIFEST_DIR"), "/nonexist.ent")));
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
